# FileCommands

./: README.md  pyproject.toml  setup.py
FileCommands/: __init__.py  __main__.py  commands.py  main.py
